--- a/grunt/package.json
+++ b/grunt/package.json
@@ -6,7 +6,7 @@
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0"
+    "grunt-contrib-uglify": "^0.5.1"
   },
   "dependencies": {
     "grunt-cli": "^1.3.1"
