--- a/grunt/package.json
+++ b/grunt/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "^1.0.3",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "^0.5.1"
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "^1.1.0"
   },
   "dependencies": {
     "grunt-cli": "^1.3.1"
